# ConceptDet

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
configs/accelerate/: cpu-two-process.yaml  ddp-four-gpu.yaml  ddp-two-gpu.yaml
docs/agents/: domain.md  issue-tracker.md
docs/prototypes/: qwen3-vl-grpo-smoke.md  qwen3-vl-lora-smoke-results.json  qwen3-vl-lora-smoke.md  reference-box-rendering.md
docs/research/: qwen3-vl-integration-contract.md  qwen3-vl-lora-memory.md
docs/specs/: qwen3vl-reference-detection.md
examples/: artifact-init.yaml  batch.yaml  data-voc.yaml  detect.yaml  evaluate.yaml  tasks.jsonl  train-grpo.yaml  train-sft.yaml
requirements/: flash-attention.txt  prototype-grpo.txt  runtime.txt
scripts/: check_environment.py  create_env.sh  inference_config.py  profile_token_budget.py  prototype_detection_set_reward.py  prototype_grpo_smoke.py  prototype_lora_smoke.py  prototype_reference_box_rendering.py  prototype_token_budget.py  run_example.sh  run_inference.sh
src/conceptdet/: __init__.py  __main__.py  acceptance.py  adapter.py  application.py  artifact.py  batch.py  cli.py  config.py  dataset.py  distributed_fake.py  errors.py  evaluation.py  geometry.py  grpo.py  model.py  multi_gpu.py  parsing.py  peft_weights.py  pipeline.py  prediction.py  prompts.py  protocol.py  run_state.py  training.py  types.py  visualization.py
src/conceptdet/prototypes/: __init__.py  detection_set_reward_logic.py  grpo_smoke_logic.py  lora_smoke_logic.py  reference_box_rendering.py  token_budget_logic.py
tests/: test_acceptance.py  test_application.py  test_artifact.py  test_batch.py  test_cli.py  test_config.py  test_dataset.py  test_environment_files.py  test_evaluation.py  test_geometry.py  test_grpo.py  test_inference_config.py  test_model.py  test_multi_gpu.py  test_parsing.py  test_pipeline.py  test_prediction.py  test_prompts.py  test_protocol.py  test_qwen_adapter.py  test_run_state.py  test_training.py  test_types.py
