[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conceptdet-r1"
version = "0.2.0"
description = "Reference-guided concept detection with ConceptSeg-R1 checkpoints"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ConceptDet-R1 contributors" }]
dependencies = [
  "accelerate>=1.14.0,<2",
  "numpy>=2.5.1,<3",
  "pillow>=12.3.0,<13",
  "safetensors>=0.8.0,<0.9",
  "sentencepiece>=0.2.2,<0.3",
  "torch>=2.13.0,<2.14",
  "torchvision>=0.28.0,<0.29",
  "transformers>=5.13.1,<5.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "ruff>=0.12",
]
flash-attn = ["flash-attn>=2.8.3.post1,<2.9"]

[project.scripts]
conceptdet = "conceptdet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
