[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conceptdet-r1"
version = "0.5.0"
description = "Qwen3-VL reference-guided multi-instance detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ConceptDet-R1 contributors" }]
dependencies = [
  "accelerate>=1.14.0,<2",
  "numpy>=2.5.1,<3",
  "peft>=0.19.1,<0.20",
  "pillow>=12.3.0,<13",
  "pyyaml>=6.0.3,<7",
  "safetensors>=0.8.0,<0.9",
  "sentencepiece>=0.2.2,<0.3",
  "torch>=2.13.0,<2.14",
  "torchvision>=0.28.0,<0.29",
  "transformers>=5.13.1,<5.14",
]

[project.optional-dependencies]
train = [
  "datasets>=5.0.0,<6",
  "peft>=0.19.1,<0.20",
]
grpo = [
  "datasets>=5.0.0,<6",
  "peft>=0.19.1,<0.20",
  "trl>=1.5.0,<1.6",
]
distributed = ["deepspeed>=0.18,<0.19"]
dev = [
  "pytest>=9.0",
  "ruff>=0.12",
]
flash-attn = ["flash-attn>=2.8.3.post1,<2.9"]

[project.scripts]
conceptdet = "conceptdet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
